Remove duplicate in tag
