# internal/api/docs/api_swagger.json
@@ -108,7 +108,6 @@
                     "application/json"
                 ],
                 "tags": [
-                    "auth",
                     "auth"
                 ],
                 "summary": "Refresh",
@@ -674,7 +673,7 @@
         "ApiKeyHeader": {
             "type": "apiKey",
             "name": "Authorization",
-            "in": "Header"
+            "in": "header"
         }
     },
     "tags": [
@@ -685,6 +684,10 @@
         {
             "description": "Tasks endpoint",
             "name": "tasks"
+        },
+        {
+            "description": "Profile endpoint",
+            "name": "profile"
         }
     ]
 }
